--- a/Projects/FEA.html
+++ b/Projects/FEA.html
@@ -2,25 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nitsche's Method | FEA & Structural Simulation - Amrit Thapa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet"/>
   <style>
+    /* --- Base --- */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f5f7fa;
       color: #333;
       line-height: 1.6;
     }
-    .section-title {
-      font-size: 2rem;
-      font-weight: 600;
-      margin-top: 2rem;
-      margin-bottom: 1rem;
-      color: #2c3e50;
+
+    /* --- Navbar Brand Hover --- */
+    .navbar-brand:hover {
+      color: #0d6efd !important;
     }
+
+    /* --- Hero --- */
     .project-hero {
       background-color: #e6ecf3;
       padding: 3rem 2rem;
@@ -30,6 +31,17 @@
       font-weight: bold;
       color: #0d6efd;
     }
+
+    /* --- Section Titles --- */
+    .section-title {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      color: #2c3e50;
+    }
+
+    /* --- Project Images --- */
     .project-image {
       width: 100%;
       max-width: 400px;
@@ -38,63 +50,34 @@
       border: 1px solid #ccc;
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-      margin-bottom: 0.7rem;
+      margin-bottom: .7rem;
       background: #fff;
       cursor: pointer;
-      transition: box-shadow 0.2s, transform 0.2s;
+      transition: transform .2s, box-shadow .2s;
     }
     .project-image:hover {
-      box-shadow: 0 8px 32px rgba(0,0,0,0.13);
       transform: scale(1.04);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.13);
     }
+
+    /* --- Captions --- */
     .img-caption {
-      font-size: 0.98rem;
+      font-size: .98rem;
       color: #555;
       margin-bottom: 1.5rem;
       min-height: 40px;
     }
-    .navbar-nav .dropdown-menu {
-      display: none !important;
-      visibility: hidden;
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
-    }
-    .navbar-nav .dropdown:hover .dropdown-menu {
-      display: block !important;
-      visibility: visible;
-      opacity: 1;
-      margin-top: 0;
-    }
-    .navbar-nav .dropdown:hover .dropdown-toggle::after {
-      transform: rotate(-180deg);
-    }
-    @media (max-width: 991.98px) {
-      .navbar-nav .dropdown-menu {
-        display: none !important;
-        visibility: hidden;
-        opacity: 0;
-      }
-      .navbar-nav .dropdown.show .dropdown-menu {
-        display: block !important;
-        visibility: visible;
-        opacity: 1;
-      }
-      .navbar-nav .dropdown:hover .dropdown-menu {
-        display: none !important;
-      }
-      .navbar-nav .dropdown-toggle::after {
-        transform: none;
-      }
-    }
   </style>
 </head>
 <body>
-
-  <!-- Universal Navbar (always at the top) -->
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">Amrit Thapa</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button"
+              data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -102,7 +85,14 @@
           <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="../index.html#experience">Work Experience</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown">Projects</a>
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               id="projectsDropdown"
+               role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">
+              Projects
+            </a>
             <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
               <li><a class="dropdown-item" href="FEA.html">FEA & Structural Simulation</a></li>
               <li><a class="dropdown-item" href="WindTunnel.html">Closed-Circuit Wind Tunnel Design</a></li>
@@ -117,24 +107,21 @@
       </div>
     </div>
   </nav>
-  <!-- End Universal Navbar -->
 
-  <!-- PROJECT HERO -->
+  <!-- Project Hero -->
   <section class="project-hero" data-aos="fade-up">
     <h1>Nitsche's Method in FEA</h1>
     <p class="lead">Handling Multi-Patch Geometries with Non-Conforming Meshes</p>
   </section>
 
-  <!-- PROJECT DETAILS -->
+  <!-- Project Details -->
   <section class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Project Overview</h2>
     <p>
-      This project explores the application of <strong>Nitsche's Method</strong> in Finite Element Analysis (FEA) to address challenges in multi-patch geometries with non-conforming meshes.
-      Nitsche's formulation adds interface terms to enforce continuity and boundary conditions while preserving stability and accuracy, even across disconnected mesh patches.
+      This project explores the application of <strong>Nitsche's Method</strong> in Finite Element Analysis (FEA) to address challenges in multi-patch geometries with non-conforming meshes. Nitsche's formulation adds interface terms to enforce continuity and boundary conditions while preserving stability and accuracy across disconnected mesh patches.
     </p>
     <p>
-      The approach is particularly powerful in problems involving <strong>linear elasticity</strong> and <strong>complex geometrical domains</strong>. Key mathematical operators such as the jump and average are implemented to bridge mesh gaps.
-      This project demonstrates how Nitsche's Method enables high-fidelity solutions in computational mechanics where standard FEA would otherwise struggle.
+      It excels in <strong>linear elasticity</strong> and <strong>complex domains</strong>, using jump and average operators to bridge mesh gaps, delivering high-fidelity solutions where standard FEA struggles.
     </p>
 
     <h2 class="section-title mt-5">Visual Results</h2>
@@ -152,10 +139,10 @@
         <p class="img-caption">2. Meshing of the Geometry</p>
       </div>
       <div class="col text-center">
-        <a href="../images/FEA project/Loading and BC .png" class="glightbox" data-glightbox="title: Loading and Boundary Conditions">
+        <a href="../images/FEA project/Loading and BC .png" class="glightbox" data-glightbox="title: Loading & Boundary Conditions">
           <img src="../images/FEA project/Loading and BC .png" alt="Loading and BC" class="project-image img-fluid shadow-sm">
         </a>
-        <p class="img-caption">3. Loading and Boundary Conditions</p>
+        <p class="img-caption">3. Loading & Boundary Conditions</p>
       </div>
       <div class="col text-center">
         <a href="../images/FEA project/DeformedShape.jpg" class="glightbox" data-glightbox="title: Displacement Plot">
@@ -173,11 +160,11 @@
         <a href="../images/FEA project/Plot to show no discontinuity.jpg" class="glightbox" data-glightbox="title: Continuity Plot">
           <img src="../images/FEA project/Plot to show no discontinuity.jpg" alt="Continuity Plot" class="project-image img-fluid shadow-sm">
         </a>
-        <p class="img-caption">6. Stress Plot from -30 to 30 to Observe Solution Continuity</p>
+        <p class="img-caption">6. Continuity Check (–30 to +30)</p>
       </div>
     </div>
 
-    <p><strong>Tools Used:</strong> MATLAB</p>
+    <p class="mt-4"><strong>Tools Used:</strong> MATLAB</p>
     <p><strong>Category:</strong> Computational Mechanics, Structural FEA, Advanced FEM Techniques</p>
   </section>
 
