--- a/index.html
+++ b/index.html
@@ -1,221 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amrit Thapa | Mechanical Engineer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f5f7fa;
-            color: #333;
-            line-height: 1.6;
-        }
-        .hero {
-            background-color: #d9e3f0;
-            padding: 4rem 2rem;
-            text-align: center;
-        }
-        .hero img {
-            width: 180px;
-            height: 180px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 1rem;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .section-title {
-            font-size: 2rem;
-            font-weight: 600;
-            margin-top: 2rem;
-            margin-bottom: 1rem;
-            color: #2c3e50;
-        }
-        .navbar-nav {
-            margin-left: auto;
-        }
-        .work-entry {
-            border-left: 4px solid #0d6efd;
-            padding-left: 1rem;
-            margin-bottom: 2rem;
-        }
-        .work-entry h5 {
-            color: #0d6efd;
-        }
-        .work-entry ul {
-            padding-left: 1.2rem;
-        }
-        .cert-img {
-            max-height: 250px;
-            object-fit: cover;
-            border: 1px solid #ddd;
-        }
-        .navbar-nav .dropdown-menu {
-            display: none !important;
-            visibility: hidden;
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out;
-        }
-        .navbar-nav .dropdown:hover .dropdown-menu {
-            display: block !important;
-            visibility: visible;
-            opacity: 1;
-            margin-top: 0;
-        }
-        .navbar-nav .dropdown:hover .dropdown-toggle::after {
-            transform: rotate(-180deg);
-        }
-        @media (max-width: 991.98px) {
-            .navbar-nav .dropdown-menu {
-                display: none !important;
-                visibility: hidden;
-                opacity: 0;
-            }
-            .navbar-nav .dropdown.show .dropdown-menu {
-                display: block !important;
-                visibility: visible;
-                opacity: 1;
-            }
-            .navbar-nav .dropdown:hover .dropdown-menu {
-                display: none !important;
-            }
-            .navbar-nav .dropdown-toggle::after {
-                transform: none;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Amrit Thapa | Mechanical Engineer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
+  <style>
+    /* ---------- Base ---------- */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* ---------- Hero ---------- */
+    .hero {
+      background-color: #d9e3f0;
+      padding: 4rem 2rem;
+      text-align: center;
+    }
+    .hero img {
+      width: 180px; height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    /* ---------- Section Titles ---------- */
+    .section-title {
+      font-size: 2rem;
+      font-weight: 600;
+      margin: 2rem 0 1rem;
+      color: #2c3e50;
+    }
+
+    /* ---------- Work Entries ---------- */
+    .work-entry {
+      border-left: 4px solid #0d6efd;
+      padding-left: 1rem;
+      margin-bottom: 2rem;
+    }
+    .work-entry h5 {
+      color: #0d6efd;
+    }
+
+    /* ---------- Certificates ---------- */
+    .cert-img {
+      max-height: 250px;
+      object-fit: cover;
+      border: 1px solid #ddd;
+    }
+  </style>
 </head>
 <body>
-    <!-- UNIVERSAL NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Amrit Thapa</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Work Experience</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown">
-                            Projects
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
-                            <li><a class="dropdown-item" href="Projects/FEA.html">FEA & Structural Simulation</a></li>
-                            <li><a class="dropdown-item" href="Projects/WindTunnel.html">Closed-Circuit Wind Tunnel Design</a></li>
-                            <li><a class="dropdown-item" href="Projects/EvaporativeCoolerAC.html">Evaporative Cooler AC with ANN Control</a></li>
-                            <li><a class="dropdown-item" href="Projects/EvaporativeCondenser.html">Evaporative Cooled Condenser Retrofit</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- END UNIVERSAL NAVBAR -->
-
-    <section class="hero" data-aos="fade-up">
-        <img src="images/Profile Photo.JPG" alt="Profile Picture">
-        <h1 class="mb-2">Amrit Thapa</h1>
-        <p class="lead">Mechanical Engineer | CFD & FEA | Thermal & Utility Systems</p>
-    </section>
-
-    <section id="about" class="container py-4" data-aos="fade-up">
-        <h2 class="section-title">About Me</h2>
-        <p>
-            Mechanical Engineer (EIT) with industry experience in utility design, mechanical analysis, and CFD simulation. Currently working as Engineer I at Techserv Engineering and Consulting, I have demonstrated the ability to deliver PE-ready utility designs and significantly boost project throughput. My background includes extensive use of SolidWorks, MATLAB, ANSYS, and OpenFOAM, with a strong foundation in thermal-fluid systems, automation, and control integration. I am driven by solving real-world engineering problems with innovative and data-driven solutions.
-        </p>
-    </section>
-
-    <section id="experience" class="container py-4" data-aos="fade-up">
-        <h2 class="section-title">Work Experience</h2>
-
-        <div class="work-entry">
-            <h5>Engineer I – Techserv Engineering and Consulting, TX (2024–Present)</h5>
-            <ul>
-                <li>Designed utility pole configurations and created PE-ready field packages.</li>
-                <li>Reviewed stress reports using SPIDA and ensured NESC compliance.</li>
-                <li>Generated cost estimates and collaborated with field teams for accuracy.</li>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Amrit Thapa</a>
+      <button class="navbar-toggler" type="button"
+              data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">Work Experience</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               id="projectsDropdown"
+               role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">
+              Projects
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
+              <li><a class="dropdown-item" href="Projects/FEA.html">FEA & Structural Simulation</a></li>
+              <li><a class="dropdown-item" href="Projects/WindTunnel.html">Closed-Circuit Wind Tunnel Design</a></li>
+              <li><a class="dropdown-item" href="Projects/EvaporativeCoolerAC.html">Evaporative Cooler AC with ANN Control</a></li>
+              <li><a class="dropdown-item" href="Projects/EvaporativeCondenser.html">Evaporative Cooled Condenser Retrofit</a></li>
             </ul>
-        </div>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
+          <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-        <div class="work-entry">
-            <h5>Engineering Intern – InergyX Building Solutions, TX (2023–2024)</h5>
-            <ul>
-                <li>Conducted blower door and duct leakage tests under PE supervision.</li>
-                <li>Used HVAC software and drones to identify and improve efficiency.</li>
-                <li>Participated in project management and client communication.</li>
-                <li>Contributed to internal innovation projects for energy auditing.</li>
-            </ul>
-        </div>
+  <!-- Hero Section -->
+  <section class="hero" data-aos="fade-up">
+    <img src="images/Profile Photo.JPG" alt="Profile Picture">
+    <h1 class="mb-2">Amrit Thapa</h1>
+    <p class="lead">Mechanical Engineer | CFD & FEA | Thermal & Utility Systems</p>
+  </section>
 
-        <div class="work-entry">
-            <h5>Graduate Researcher – Entegra Sources Pvt. Ltd, Kathmandu (May–Aug 2021)</h5>
-            <ul>
-                <li>Designed a 5 tons/hr Plastic Cutter and Shredder for urban recycling initiatives.</li>
-                <li>Led remote simulations for diverse BPO-based engineering projects.</li>
-                <li>Used AutoCAD, SolidWorks, and ANSYS to develop optimized solutions.</li>
-            </ul>
-        </div>
+  <!-- About -->
+  <section id="about" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">About Me</h2>
+    <p>
+      Mechanical Engineer (EIT) with industry experience in utility design, mechanical analysis, and CFD simulation. Currently
+      working as Engineer I at Techserv Engineering and Consulting, I deliver PE-ready utility designs and significantly boost
+      project throughput. Skilled in SolidWorks, MATLAB, ANSYS, and OpenFOAM, with a strong foundation in thermal-fluid systems,
+      automation, and control integration.
+    </p>
+  </section>
 
-        <div class="work-entry">
-            <h5>Mechanical Design Intern – Surya Nepal Pvt. Ltd, Simara (Sep–Nov 2019)</h5>
-            <ul>
-                <li>Improved automated packaging efficiency by 6% via geometry optimization.</li>
-                <li>Engineered a cost-effective hydraulic press for tobacco cake quality control.</li>
-            </ul>
-        </div>
-    </section>
+  <!-- Work Experience -->
+  <section id="experience" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Work Experience</h2>
 
-    <section id="certificates" class="container py-4" data-aos="fade-up">
-        <h2 class="section-title">Certificates</h2>
-        <div class="row g-4">
-            <div class="col-md-4 text-center">
-                <img src="images/Coursera Semiconducter Packaging Manufacturing.jpg" alt="Semiconductor Certificate" class="img-fluid rounded cert-img shadow">
-                <p class="mt-2"><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
-            </div>
-            <div class="col-md-4 text-center">
-                <img src="images/EIT.jpg" alt="EIT Certificate" class="img-fluid rounded cert-img shadow">
-                <p class="mt-2"><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
-            </div>
-            <div class="col-md-4 text-center">
-                <img src="images/Courseera MATLAB.jpg" alt="MATLAB Certificate" class="img-fluid rounded cert-img shadow">
-                <p class="mt-2"><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
-            </div>
-            <div class="col-md-4 text-center">
-                <img src="images/openfoam.jpg" alt="OpenFOAM Certificate" class="img-fluid rounded cert-img shadow">
-                <p class="mt-2"><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
-            </div>
-        </div>
-    </section>
+    <div class="work-entry">
+      <h5>Engineer I – Techserv Engineering and Consulting, TX (2024–Present)</h5>
+      <ul>
+        <li>Designed utility pole configurations and created PE-ready field packages.</li>
+        <li>Reviewed stress reports using SPIDA and ensured NESC compliance.</li>
+        <li>Generated cost estimates and collaborated with field teams for accuracy.</li>
+      </ul>
+    </div>
 
-    <section id="resume" class="container py-4" data-aos="fade-up">
-        <h2 class="section-title">Resume</h2>
-        <a href="Resume_Amrit Thapa.pdf" download class="btn btn-outline-primary">
-            Download My Resume
-        </a>
-    </section>
+    <div class="work-entry">
+      <h5>Engineering Intern – InergyX Building Solutions, TX (2023–2024)</h5>
+      <ul>
+        <li>Conducted blower door and duct leakage tests under PE supervision.</li>
+        <li>Used HVAC software and drones to identify and improve efficiency.</li>
+        <li>Participated in project management and client communication.</li>
+        <li>Contributed to internal innovation projects for energy auditing.</li>
+      </ul>
+    </div>
 
-    <section id="contact" class="container py-4" data-aos="fade-up">
-        <h2 class="section-title">Contact</h2>
-        <p>Email: <a href="mailto:athapa.2023@gmail.com">athapa.2023@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/amrit-thapa" target="_blank">linkedin.com/in/amrit-thapa</a></p>
-        <p>Phone: <a href="tel:+15037030978">(503) 703-0978</a></p>
-    </section>
+    <div class="work-entry">
+      <h5>Graduate Researcher – Entegra Sources Pvt. Ltd, Kathmandu (May–Aug 2021)</h5>
+      <ul>
+        <li>Designed a 5 tons/hr Plastic Cutter and Shredder for urban recycling initiatives.</li>
+        <li>Led remote simulations for diverse BPO-based engineering projects.</li>
+        <li>Used AutoCAD, SolidWorks, and ANSYS to develop optimized solutions.</li>
+      </ul>
+    </div>
 
-    <footer class="bg-light text-center py-3 mt-4 border-top">
-        &copy; 2025 Amrit Thapa. All rights reserved.
-    </footer>
+    <div class="work-entry">
+      <h5>Mechanical Design Intern – Surya Nepal Pvt. Ltd, Simara (Sep–Nov 2019)</h5>
+      <ul>
+        <li>Improved automated packaging efficiency by 6% via geometry optimization.</li>
+        <li>Engineered a cost-effective hydraulic press for tobacco cake quality control.</li>
+      </ul>
+    </div>
+  </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+  <!-- Certificates -->
+  <section id="certificates" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Certificates</h2>
+    <div class="row g-4">
+      <div class="col-md-4 text-center">
+        <img src="images/Coursera Semiconducter Packaging Manufacturing.jpg" alt="Semiconductor" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/EIT.jpg" alt="EIT Certificate" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/Courseera MATLAB.jpg" alt="MATLAB Certificate" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/openfoam.jpg" alt="OpenFOAM Certificate" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Resume -->
+  <section id="resume" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Resume</h2>
+    <a href="Resume_Amrit Thapa.pdf" download class="btn btn-outline-primary">Download My Resume</a>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Contact</h2>
+    <p>Email: <a href="mailto:athapa.2023@gmail.com">athapa.2023@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/amrit-thapa" target="_blank">linkedin.com/in/amrit-thapa</a></p>
+    <p>Phone: <a href="tel:+15037030978">(503) 703-0978</a></p>
+  </section>
+
+  <footer class="bg-light text-center py-3 mt-4 border-top">
+    &copy; 2025 Amrit Thapa. All rights reserved.
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
